<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="CurrencyTypePurchaseAdapter"
            type="com.ravinada.cryptocompare.CurrencyTypePurchaseAdapter" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/lbl_add_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:padding="@dimen/space_8"
            android:text="@string/label_portfolio"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/select_coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/space_8"
            android:text="@string/currency"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_coin" />

        <TextView
            android:id="@+id/txt_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_rect_green"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/space_8"
            android:paddingEnd="16dp"
            android:paddingBottom="@dimen/space_8"
            android:text="@string/Private"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_public"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buy_price" />

        <TextView
            android:id="@+id/txt_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect_grey"
            android:padding="@dimen/space_8"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/space_8"
            android:paddingEnd="16dp"
            android:paddingBottom="@dimen/space_8"
            android:text="@string/Public"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_private"
            app:layout_constraintStart_toEndOf="@+id/txt_private"
            app:layout_constraintTop_toTopOf="@+id/txt_private" />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_clear_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_add_coin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lbl_add_coin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/buy_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/space_8"
            android:text="@string/access"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_amount" />

        <TextView
            android:id="@+id/lbl_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/space_8"
            android:text="@string/description"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectCurrencyPurchaseCoin" />

        <EditText
            android:id="@+id/select_coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rect_grey"
            android:hint="@string/title_portfolio"
            android:inputType="textMultiLine|text"
            android:padding="@dimen/space_8"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_add_coin" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rect_grey"
            android:hint="@string/add_description"
            android:inputType="textMultiLine|text"
            android:padding="@dimen/space_8"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_amount" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectCurrencyPurchaseCoin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/select_currency_purchase_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/lbl_coin">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="271dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_drawable_symbol"
            android:paddingStart="112dp"
            android:paddingEnd="112dp"
            android:text="@string/label_submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buy_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>